--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .message_Box {
   text-align: center;
-  border: 1px solid rgb(12, 244, 39);
- 
+  border: 1px solid #ba3dba;
+
 }
+.app {
+  display: flex;
+  justify-content: space-around;
+}
+  
 
