--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,26 @@
 }
 .app {
   display: flex;
+  
+}
+.left {
+  margin-right: 120px;
+  margin-top: 10px;
+}
+.navBar {
+  display: flex;
+  flex-direction: column;
+}
+.chatPage {
+  display: flex;
   justify-content: space-around;
+}
+.chatPage_left {
+  
+  margin-right: 60px;
+}
+.chatPage_right {
+  margin-top: 60px;
 }
   
 
